--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {font-family: "Arial"}
 <div div class="text-center">
         <br>
         <br>
-        <p>Recomended to open the projects on desktop <p>  
+        <p>Recomended to open the projects on desktop </p>  
         <a class="btn btn-primary" href="./pages/ML_1.html" role="button">Project 1</a>
         <a class="btn btn-primary" href="./pages/ML_2.html" role="button">Project 2</a>
         <a class="btn btn-primary" href="./pages/ML_3.html" role="button">Project 3</a>
