--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body {font-family: "Arial"}
 
 <!-- Footer -->
 <footer class="w3-center w3-light-grey w3-padding-32">
-  <p>Developed by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">Rishee</a></p>
+  <p>Developed by Rishee</p>
 </footer>
 
 </body>
