--- a/index.html
+++ b/index.html
@@ -1,55 +1,147 @@
 <!DOCTYPE html>
-<html>
-<title>Rishee Barthakur Biodata</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<style>
-body {font-family: "Arial"}
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rishee Barthakur's Information</title>
+    <style>
+        /* Reset some default styles */
+        body, h1, p {
+            margin: 0;
+            padding: 0;
+        }
 
-</style>
+        /* General styles */
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #f0f2f5;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        /* Container styles */
+        .container {
+            background: #ffffff;
+            padding: 20px;
+            border-radius: 15px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+            text-align: center;
+            width: 90%;
+            max-width: 800px;
+            margin: 20px;
+        }
+
+        /* Profile photo styles */
+        .profile-photo {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 5px solid #007BFF;
+            margin-bottom: 20px;
+        }
+
+        /* Heading styles */
+        h1 {
+            color: #343a40;
+            margin-bottom: 20px;
+            font-size: 24px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        /* LinkedIn logo styles */
+        h1 a img {
+            width: 24px;
+            height: 24px;
+            margin-left: 8px;
+        }
+
+        /* Paragraph styles */
+        p {
+            font-size: 16px;
+            color: #495057;
+            margin-bottom: 20px;
+            line-height: 1.5;
+        }
+
+        /* Button styles */
+        .tabs {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
+        .button {
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            margin: 5px;
+            text-decoration: none;
+            transition: background-color 0.3s, transform 0.3s;
+        }
+
+        .button:hover {
+            background-color: #0056b3;
+            transform: translateY(-2px);
+        }
+
+        .button:active {
+            transform: translateY(1px);
+        }
+
+        /* Responsive styles */
+        @media (max-width: 600px) {
+            .container {
+                padding: 15px;
+            }
+
+            .profile-photo {
+                width: 120px;
+                height: 120px;
+            }
+
+            h1 {
+                font-size: 20px;
+            }
+
+            p {
+                font-size: 14px;
+            }
+
+            .button {
+                font-size: 14px;
+                padding: 8px 16px;
+            }
+        }
+    </style>
+</head>
 <body>
-
-<!-- Navbar (sit on top) -->
-<br>
-<div class="container-fluid">
-  <div class="shadow p-3 mb-5 bg-white rounded">
-      <div class="col-xs-1" align="center">
-        <h5>
-            Machine Learning by <a href="https://www.linkedin.com/in/rishee-barthakur-464405120/" ><u>Rishee Barthakur</u></a>
-        </h5>
-      </div>    
-  </div>
-</div>
-
-
-<div div class="text-center">
-        <br>
-        <br>
-        <p>Recommended to open the projects on desktop </p>  
-        <a class="btn btn-primary" href="./pages/ML_1.html" role="button">Project 1</a>
-        <a class="btn btn-primary" href="./pages/ML_2.html" role="button">Project 2</a>
-        <a class="btn btn-primary" href="./pages/ML_3.html" role="button">Project 3</a>
-        <a class="btn btn-primary" href="./pages/ML_4.html" role="button">Project 4</a>
-     
-</div>
-
-
-<div>
-    <br>
-    <br>
-    <br>
-    <br>
-</div>
-
-<!-- Footer -->
-<footer class="w3-center w3-light-grey w3-padding-32">
-  <p>Developed by Rishee</p>
-</footer>
-
+    <div class="container">
+        <img src="images/profile.jpg" alt="Profile Photo" class="profile-photo">
+        <h1 id="name">Rishee Barthakur
+            <a href="https://www.linkedin.com/in/rishee-barthakur-464405120/?originalSubdomain=au" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn Logo">
+            </a>
+        </h1>
+        <p>
+            I began my career as an Android developer then moved into software engineering. For the past few years, I've focused on Data and AI, designing and building end-to-end solutions, engaging with stakeholders, and leading innovative projects. I notably developed a proprietary tool for Deloitte for autonomous data quality issue identification and remediation. While web development is my passion, my professional focus is on system engineering, system implementation, data engineering, and analytics.
+        </p>
+        <div class="tabs">
+            <a href="projects.html" class="button">Projects</a>
+            <a href="qualifications.html" class="button">Qualifications</a>
+            <a href="certifications.html" class="button">Certifications</a>
+            <a href="awards.html" class="button">Awards</a>
+        </div>
+    </div>
 </body>
 </html>
