--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <style>
+        * {
+            box-sizing: border-box;
+        }
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #f0f2f5;
@@ -20,7 +23,7 @@
             padding: 40px;
             border-radius: 15px;
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-            width: 90%;
+            width: 100%;
             max-width: 900px;
             text-align: center;
         }
@@ -107,6 +110,9 @@
             .project-button {
                 font-size: 16px;
                 padding: 10px 20px;
+            }
+            p {
+                font-size: 16px;
             }
         }
     </style>
