--- a/projects.html
+++ b/projects.html
@@ -119,7 +119,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Projects</h1>
+        <h1>Projects Page</h1>
         <p>
             Here are some of the notable projects I've worked on. Click on the buttons to view the detailed project documents.
         </p>
