--- a/awards.html
+++ b/awards.html
@@ -91,25 +91,25 @@
         </p>
         <div class="award-grid">
             <div class="award">
-                <img src="images/a1.png" alt="Award 1" onclick="showModal(this.src)">
+                <img src="images/a1.PNG" alt="Award 1" onclick="showModal(this.src)">
             </div>
             <div class="award">
-                <img src="images/a2.png" alt="Award 2" onclick="showModal(this.src)">
+                <img src="images/a2.PNG" alt="Award 2" onclick="showModal(this.src)">
             </div>
             <div class="award">
-                <img src="images/a3.png" alt="Award 3" onclick="showModal(this.src)">
+                <img src="images/a3.PNG" alt="Award 3" onclick="showModal(this.src)">
             </div>
             <div class="award">
-                <img src="images/a4.png" alt="Award 4" onclick="showModal(this.src)">
+                <img src="images/a4.PNG" alt="Award 4" onclick="showModal(this.src)">
             </div>
             <div class="award">
-                <img src="images/a5.png" alt="Award 5" onclick="showModal(this.src)">
+                <img src="images/a5.PNG" alt="Award 5" onclick="showModal(this.src)">
             </div>
             <div class="award">
-                <img src="images/a6.png" alt="Award 6" onclick="showModal(this.src)">
+                <img src="images/a6.PNG" alt="Award 6" onclick="showModal(this.src)">
             </div>
             <div class="award">
-                <img src="images/a7.png" alt="Award 7" onclick="showModal(this.src)">
+                <img src="images/a7.PNG" alt="Award 7" onclick="showModal(this.src)">
             </div>
         </div>
     </div>
