--- a/projects.html
+++ b/projects.html
@@ -131,10 +131,10 @@
             <a href="https://github.com/Rishee123/HR_data/blob/main/HR_Date_Analysis.pdf" target="_blank" class="project-button">HR Data Analysis</a>
             <a href="https://github.com/Rishee123/dwproject/blob/main/Report.pdf" target="_blank" class="project-button">Data Warehousing</a>
             <a href="https://github.com/Rishee123/business_intelligence/blob/main/Report.pdf" target="_blank" class="project-button">BI Report</a>
-            <a href="https://rishee123.github.io/MLProject.io/pages/ML_1.html" target="_blank" class="project-button">Machine Learning Exercise 1</a>
-            <a href="https://rishee123.github.io/MLProject.io/pages/ML_2.html" target="_blank" class="project-button">Machine Learning Exercise 2</a>
-            <a href="https://rishee123.github.io/MLProject.io/pages/ML_3.html" target="_blank" class="project-button">Machine Learning Exercise 3</a>
-            <a href="https://rishee123.github.io/MLProject.io/pages/ML_4.html" target="_blank" class="project-button">Machine Learning Exercise 4</a>
+            <a href="https://rishee123.github.io/rishee-portfolio.io/pages/ML_1.html" target="_blank" class="project-button">Machine Learning Exercise 1</a>
+            <a href="https://rishee123.github.io/rishee-portfolio.io/pages/ML_2.html" target="_blank" class="project-button">Machine Learning Exercise 2</a>
+            <a href="https://rishee123.github.io/rishee-portfolio.io/pages/ML_3.html" target="_blank" class="project-button">Machine Learning Exercise 3</a>
+            <a href="https://rishee123.github.io/rishee-portfolio.io/pages/ML_4.html" target="_blank" class="project-button">Machine Learning Exercise 4</a>
         </div>
         
         <h2>Application & Product Development</h2>
